# StellaverseIR_OpenLR2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
examples/: http_auth.sample.cpp
include/: LR2_customir_api.h
src/: StellaverseIR.cpp  constants.h  http.cpp  http.h  http_auth.cpp  http_auth.h  http_auth_stub.cpp  json_util.h  log.cpp  log.h  rank.cpp  rank.h  score_db.cpp  score_db.h  score_payload.cpp  score_payload.h
